Added many transformations and axis prompt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 11)
 add_executable(Vector3
         main.cpp
         Vec3.cpp
-        Transform.cpp
-        Utils.cpp
+        Matrix4.cpp
+        Transformations.cpp
         Tests.cpp
 )
